--- a/templates/partials/_project-actions.html
+++ b/templates/partials/_project-actions.html
@@ -87,9 +87,9 @@
         </div>
 
         <div>
-            <div class="project-header-div border-top-solid-teal border-bottom-solid-teal flex-this space-between">
+            <div class="section-header-div border-top-solid-teal border-bottom-solid-teal flex-this space-between">
                 <h2>Project details</h2>
-                <h2 class="mr-8 pointer" onclick="toggleProjectInfo(this, 'projectDetailsDiv')"><i class="fa-solid fa-minus fa-xl darkteal-text"></i></h2>
+                <h2 class="mr-8 pointer" onclick="toggleSectionInfo(this, 'projectDetailsDiv')"><i class="fa-solid fa-minus fa-xl darkteal-text"></i></h2>
             </div>
             <div id="projectDetailsDiv" style="height: auto; overflow: hidden;">
                 <div class="flex-this">
@@ -303,9 +303,9 @@
             </div>
 
             {% if notices %}
-                <div class="project-header-div border-top-solid-teal border-bottom-solid-teal flex-this space-between">
+                <div class="section-header-div border-top-solid-teal border-bottom-solid-teal flex-this space-between">
                     <h2 id="notices">Project Notices</h2>
-                    <h2 class="mr-8 pointer" onclick="toggleProjectInfo(this, 'projectNoticesDiv')"><i class="fa-solid fa-minus fa-xl darkteal-text"></i></h2>
+                    <h2 class="mr-8 pointer" onclick="toggleSectionInfo(this, 'projectNoticesDiv')"><i class="fa-solid fa-minus fa-xl darkteal-text"></i></h2>
                 </div>
                 <div id="projectNoticesDiv" style="height: auto; overflow: hidden;">
                     {% for notice in notices %}
@@ -344,9 +344,9 @@
             {% endif %}
 
             {% if project.has_bclabels or project.has_tklabels %}
-                <div class="project-header-div border-top-solid-teal border-bottom-solid-teal flex-this space-between">
+                <div class="section-header-div border-top-solid-teal border-bottom-solid-teal flex-this space-between">
                     <h2 id="labels">Project Labels</h2>
-                    <h2 class="mr-8 pointer" onclick="toggleProjectInfo(this, 'projectLabelsDiv')"><i class="fa-solid fa-minus fa-xl darkteal-text"></i></h2>
+                    <h2 class="mr-8 pointer" onclick="toggleSectionInfo(this, 'projectLabelsDiv')"><i class="fa-solid fa-minus fa-xl darkteal-text"></i></h2>
                 </div>
                 <div id="projectLabelsDiv" style="height: auto; overflow: hidden;">
 
@@ -405,9 +405,9 @@
             {% endif %}
 
             {% if not project.source_project_uuid %}
-                <div class="project-header-div border-top-solid-teal border-bottom-solid-teal flex-this space-between">
+                <div class="section-header-div border-top-solid-teal border-bottom-solid-teal flex-this space-between">
                     <h2>Sub Projects</h2>
-                    <h2 class="mr-8 pointer" onclick="toggleProjectInfo(this, 'subProjectsDiv')"><i class="fa-solid fa-minus fa-xl darkteal-text"></i></h2>
+                    <h2 class="mr-8 pointer" onclick="toggleSectionInfo(this, 'subProjectsDiv')"><i class="fa-solid fa-minus fa-xl darkteal-text"></i></h2>
                 </div>
                 <div id="subProjectsDiv" style="height: auto; overflow: hidden;">
 
@@ -442,9 +442,9 @@
             {% endif %}
 
 
-            <div class="project-header-div border-top-solid-teal border-bottom-solid-teal flex-this space-between">
+            <div class="section-header-div border-top-solid-teal border-bottom-solid-teal flex-this space-between">
                 <h2>Related Projects</h2>
-                <h2 class="mr-8 pointer" onclick="toggleProjectInfo(this, 'relatedProjectsDiv')"><i class="fa-solid fa-minus fa-xl darkteal-text"></i></h2>
+                <h2 class="mr-8 pointer" onclick="toggleSectionInfo(this, 'relatedProjectsDiv')"><i class="fa-solid fa-minus fa-xl darkteal-text"></i></h2>
             </div>
             <div id="relatedProjectsDiv" style="height: auto; overflow: hidden;">
 
@@ -586,7 +586,7 @@
             {% include 'projects/project-comment.html'%}
 
             {% if activities %}
-                <div class="project-header-div border-top-solid-teal border-bottom-solid-teal flex-this space-between">
+                <div class="section-header-div border-top-solid-teal border-bottom-solid-teal flex-this space-between">
                     <h2>
                         Project activity
                         <div class="tooltip ml-5"><strong>i</strong>
@@ -595,7 +595,7 @@
                             </span>
                         </div> 
                     </h2>
-                    <h2 class="mr-8 pointer" onclick="toggleProjectInfo(this, 'projectActivityDiv')"><i class="fa-solid fa-plus fa-xl darkteal-text"></i></h2>
+                    <h2 class="mr-8 pointer" onclick="toggleSectionInfo(this, 'projectActivityDiv')"><i class="fa-solid fa-plus fa-xl darkteal-text"></i></h2>
                 </div>
                 <div id="projectActivityDiv" style="height: 0px; overflow: hidden;">
                     {% for activity in activities %}
