add SP to affiliations/orgs dropdown in subscriptions form

--- a/templates/accounts/subscription-inquiry.html
+++ b/templates/accounts/subscription-inquiry.html
@@ -4,6 +4,7 @@
 <script type="text/javascript">
   var nonRorInstitutes = JSON.parse('{{ non_ror_institutes | safe }}')
   var communities = JSON.parse('{{ communities | safe}}')
+  var serviceProviders = JSON.parse('{{ service_providers | safe}}')
 
   grecaptcha.ready(function () {
     grecaptcha
