--- a/templates/snippets/notifications.html
+++ b/templates/snippets/notifications.html
@@ -11,7 +11,7 @@
 {% return_notifications service_provider as service_provider_notifications %}
 
 
-<div class="dropdown mr-8" >
+<div class="dropdown">
 
     {% if 'dashboard' in request.path  and scope != user %}
         <div class="m-0">
