--- a/localcontexts/static/css/dashboard.css
+++ b/localcontexts/static/css/dashboard.css
@@ -69,14 +69,15 @@
 }
 
 .dashcard-subheader {
-    margin-bottom: 0;
+    margin-top: 8px;
+    margin-bottom: 8px;
     font-weight: bold;
     color: #333;
 }
 
 .dashcard-description {
-    margin-top: 5px;
-    margin-bottom: 0;
+    margin-top: 0px;
+    margin-bottom: 0px;
     font-style: normal;
     color: #333;
     width: 95%;
