--- a/templates/partials/infocards/_researcher-card.html
+++ b/templates/partials/infocards/_researcher-card.html
@@ -35,7 +35,7 @@
     </div>
 
     <!-- Buttons and OTC Notice -->
-    <div class="dashcard-btn-container ml-auto">
+    <div class="dashcard-btn-container ml-auto gap-half">
       {% if '/registry/' in request.path or '/connections/' in request.path or '/service-providers/view/' in request.path %}
         <!-- View Public Page -->
         <div>
@@ -63,7 +63,7 @@
 
       {% if '/dashboard/' in request.path %}
         <!-- View Account -->
-        <div class="mr-16">
+        <div>
           <a
             class="primary-btn action-btn"
             href="{% if researcher.get_projects %}{% url 'researcher-projects' researcher.id %}{% else %}{% url 'researcher-notices' researcher.id %}{% endif %}"
