Updated POST request

--- a/templates/account_settings_pages/_subscription.html
+++ b/templates/account_settings_pages/_subscription.html
@@ -67,7 +67,7 @@
 
 <!-- Bundle Model -->
 
-<div id="bundleModal" class="modal hide" onClick="closeBundleModal()">
+<div id="bundleModal" class="modal hide">
   <span id="bundleModalContent">
       <!-- ADD MEMBER MODAL VIEW -->
       <div id="addMemberModalView" class="modal-defaults add-member-modal flex-this column w-100">
@@ -79,8 +79,8 @@
                   </p>
           </div>
 
-          <div >
-              <div class="close-modal-btn" id='close-model-button' onClick="closeBundleModal(event)"><i class="fa-regular fa-xmark fa-xl"></i></div>
+          <div id='close-model-button' onClick="closeBundleModal()">
+              <div class="close-modal-btn"><i class="fa-regular fa-xmark fa-xl"></i></div>
           </div>
       </div>  
         
