--- a/templates/institutions/create-custom-institution.html
+++ b/templates/institutions/create-custom-institution.html
@@ -97,7 +97,7 @@
                         <span class="ml-5">Subscription</span>
                     </label>
                     <label class="radio-container w-50 mt-2p">
-                        <input class="pointer" type="radio" name="inquiry_type" value="Subscription -- CC Notices Only">
+                        <input class="pointer" type="radio" name="inquiry_type" value="CC Notice Only">
                         <span class="ml-5">Collections Care Notices</span>
                     </label>
                 </div>
