--- a/templates/account_settings_pages/_connect-service-provider.html
+++ b/templates/account_settings_pages/_connect-service-provider.html
@@ -2,15 +2,6 @@
 
 {% block account_settings %}
 <style>
-    .disconnect-btn {
-        background-color: #DDDDDD;
-        border: 1px solid #DDDDDD;
-    }
-
-    .disconnect-btn:hover {
-        background-color: #e7e7e7;
-    }
-
     #settings-tooltip.tooltiptext::after{
         left: 122%;
     }
@@ -59,22 +50,30 @@
     <p class="mb-8"><small>Displaying {{ other_service_providers.count }} service provider(s)</small></p>
     {% for service_provider in other_service_providers %}
         <div class="flex-this space-between border-top-bottom-grey w-100 align-center pad-16">
-            <div class="w-70">
+            <div class="w-85">
                 <p>{{ service_provider.name }}</p>
             </div>
 
-            {% if institution and institution.is_subscribed %}
-                <button name="connectServiceProviderbtn" class="primary-btn action-btn" data-name="{{ service_provider.name }}" data-id="{{ service_provider.id }}">Connect <i class="fa-solid fa-link-simple"></i></button>
-            {% elif researcher and researcher.is_subscribed %}
-                <button name="connectServiceProviderbtn" class="primary-btn action-btn" data-name="{{ service_provider.name }}" data-id="{{ service_provider.id }}">Connect <i class="fa-solid fa-link-simple"></i></button>
-            {% else %}
-                <div class="btn-with-helptext">
-                    <a class="primary-btn disabled-btn">Connect <i class="fa-solid fa-link-simple"></i></a>
-                    <span class="btn-help-text">
-                        Your account needs to be {% if community %}confirmed{% else %}subscribed{% endif %} to connect to Service Providers.
-                    </span>
-                </div>
-            {% endif %}
+            <div class="w-15">
+                {% if institution.is_subscribed or researcher.is_subscribed or community.is_approved %}
+                    {% if not service_provider.certification_type == 'manual'%}
+                        <button name="connectServiceProviderbtn" class="primary-btn action-btn w-100" data-name="{{ service_provider.name }}" data-id="{{ service_provider.id }}">Connect <i class="fa-solid fa-link-simple"></i></button>
+                    {% elif service_provider.certification_type == 'manual' %}
+                        <a class="primary-btn action-btn w-100" href="{{ service_provider.documentation }}" target="_blank">More Info <i class="fa fa-arrow-right"></i></a>
+                    {% endif %}
+                {% else %}
+                    {% if not service_provider.certification_type == 'manual'%}
+                        <div class="btn-with-helptext">
+                            <a class="primary-btn disabled-btn w-100">Connect <i class="fa-solid fa-link-simple"></i></a>
+                            <span class="btn-help-text">
+                                Your account needs to be {% if community %}confirmed{% else %}subscribed{% endif %} to connect to Service Providers.
+                            </span>
+                        </div>
+                    {% elif service_provider.certification_type == 'manual' %}
+                        <a class="primary-btn action-btn w-100" href="{{ service_provider.documentation }}" target="_blank">More Info <i class="fa fa-arrow-right"></i></a>
+                    {% endif %}
+                {% endif %}
+            </div>
         </div>
     {% endfor %}
 </div>
