--- a/templates/communities/add-community-boundary.html
+++ b/templates/communities/add-community-boundary.html
@@ -1,4 +1,4 @@
-{% extends 'register-base.html' %} {% block title %} Add Community {% endblock %} {% load static %} {% block card %}
+{% extends 'register-base.html' %} {% block title %} Add Community {% endblock %} {% load static %} {% block card %} {% load custom_api_tags %}
     <style>
         #define-community-top-text{
             width: 94%;
@@ -184,7 +184,7 @@
     </div>
 
     <script>
-        fetch('https://native-land.ca/wp-json/nativeland/v1/map-list').then(resp => resp.json()).then(response => {
+        fetch('{% external_api "https://native-land.ca/wp-json/nativeland/v1/map-list" %}').then(resp => resp.json()).then(response => {
 
             document.querySelector('#region-container input.search').addEventListener("keyup", (event) => {
                 let html = ''
