--- a/templates/account_settings_pages/_subscription.html
+++ b/templates/account_settings_pages/_subscription.html
@@ -52,6 +52,7 @@
       <div><h4 class="mb-0">Edit Subscription</h4></div>
     </div>
     <p class="mt-0"><small>Manage and edit your subscription plan</small></p>
+    {% include 'partials/_alerts.html' %}
     <div class="flex-this">
       <div>
           <button type="submit" class="primary-btn action-btn" name="generatebtn" onclick="openAddModalView()">Update Subscription</button>
