feat: when "Clear Boundary" button is cliced, the BoundaryPayload is reset

--- a/templates/boundary/update-boundary-via-native-land-and-shapefile.html
+++ b/templates/boundary/update-boundary-via-native-land-and-shapefile.html
@@ -553,6 +553,8 @@
       clearShapeFileInput(selectionUnit)
       selectInitialShareBoundaryPublicly()
       disableContinueButton()
+      BoundaryPayLoad = {}
+      setBoundaryPayloadForInputElement()
     }
 </script>
 <script src="{% static 'javascript/shpjs.js' %}"></script>
