feat: added data-test-id to reference element

--- a/templates/partials/_project-actions.html
+++ b/templates/partials/_project-actions.html
@@ -267,6 +267,7 @@
                                 {% if 'native-land.ca' in project.source_of_boundary and project.name_of_boundary %}
                                     <span>
                                         <a
+                                           data-test-id="native-land-link"     
                                            href="{{project.source_of_boundary}}"
                                            class="default-a" target="_blank" rel="noopener"
                                            style="display: block; margin-bottom: 5px;">
